crates/tree-sitter-ppl/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.module_declaration,
      $.import_declaration,
      $.type_declaration,
      $.enum_declaration,
      $.function_declaration,
      $.procedure_declaration,
      $.function_definition,
      $.procedure_definition,
      $._statement,
    ),

    // ---------- Preprocessor ----------
    // Directives are written as comments so that a source using them still
    // reads as a comment to any older tool.
    type_declaration: $ => seq(
      kw('TYPE'),
      field('name', $.identifier),
      repeat($.field_declaration),
      endKw('TYPE'),
    ),

    enum_declaration: $ => seq(
      kw('ENUM'),
      field('name', $.identifier),
      repeat($.enum_variant),
      endKw('ENUM'),
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
      optional(','),
    ),

    field_declaration: $ => seq(
      field('type', $._type),
      commaSep1(seq(field('name', $.identifier), optional($.dimensions))),
    ),

    _type: $ => choice($.builtin_type, alias($.identifier, $.type_identifier)),

    builtin_type: $ => choice(...BUILTIN_TYPES.map(t => kw(t))),

    // ---------- Statements ----------
    _statement: $ => choice(
      $.variable_declaration,
      $.const_declaration,
      $.assignment_statement,
      $.if_statement,
      $.if_block,
      $.while_statement,
      $.while_block,
      $.repeat_statement,
      $.loop_statement,
      $.for_statement,
      $.foreach_statement,
      $.select_statement,
      $.goto_statement,
      $.gosub_statement,
      $.on_error_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.end_statement,
      $.exit_statement,
      $.block,
      $.label,
      $.predefined_call,
      $.procedure_call,
      $.member_call,
      $._preprocessor_directive,
    ),

    variable_declaration: $ => seq(
      field('type', $._type),
      commaSep1($.variable_declarator),
    ),

    // The value has to be one the compiler can work out.
    variable_declarator: $ => prec.right(seq(
      field('name', $.identifier),
      optional($.dimensions),
      optional(seq('=', field('value', choice($._expression, $.array_initializer)))),
    )),

    // 4.00 wants brackets and only warns about parentheses, which older sources still use.
    dimensions: $ => choice(
      seq('(', commaSep1($._expression), ')'),
      seq('[', commaSep1($._expression), ']'),
      // A dynamic array leaves its bounds to the runtime, which only brackets can say.
      seq('[', repeat(','), ']'),
    ),

    assignment_statement: $ => seq(
      optional(kw('LET')),
      field('left', $._assignment_target),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=')),
      field('right', $._expression),
    ),

    // A variable may carry the name of a built-in statement, constant or type, so those
    // spellings have to be accepted on the left of an assignment as well.
    _assignment_target: $ => choice(
      $.identifier,
      alias($.builtin_statement, $.identifier),
      alias($.builtin_constant, $.identifier),
      alias($.builtin_type, $.identifier),
      $.member_access,
      $.index_expression,
      $.call_expression,
    ),
    if_statement: $ => seq(
      kw('IF'),
      field('condition', $._expression),
      field('consequence', $._statement),
    ),

    predefined_call: $ => seq(
      field('name', $.builtin_statement),
      optional(commaSep1(field('argument', $._expression))),
    ),

    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression,
    ),

    // What a call, an index or a member reads from: always a value, never `-x`, which
    // the member and call precedences already imply. Saying it here keeps `+` and `-`
    // out of the tokens a statement can start with, so the condition of an unseparated
    // `IF a + b stmt` cannot end at `a`.
    _primary_expression: $ => choice(
      $.identifier,
      $.builtin_constant,
      $._name_from_keyword,
      $.constant,
      $.substitution,
      $.parenthesized_expression,
      $.call_expression,
      $.index_expression,
      $.member_access,
      $.record_literal,
    ),

    // `LANG`, `STRING` and friends name a statement or a type and a function or
    // constant at the same time. Reading one as a value is the last resort, so
    // that a statement of its own is preferred where both would parse.
    binary_expression: $ => {
      const table = [
        [PREC.OR, choice('||', '|')],
        [PREC.AND, choice('&&', '&')],
        [PREC.COMPARE, choice('==', '=', '!=', '<>', '><', '<=', '=<', '>=', '=>', '<', '>')],
        [PREC.ADD, choice('+', '-')],
        [PREC.MUL, choice('*', '/', '%')],
      ];
      return choice(
        ...table.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        ))),
        prec.left(PREC.POW, seq(
          field('left', $._expression),
          field('operator', '^'),
          field('right', $._expression),
        )),
      );
    },

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', $._primary_expression),
      '(',
      commaSep(field('argument', $._expression)),
      ')',
    )),

    index_expression: $ => prec(PREC.CALL, seq(
      field('array', $._primary_expression),
      '[',
      commaSep1(field('index', $._expression)),
      ']',
    )),

    // A type name may stand in expression position, naming an enum member or the one
    // value a board object has, so it is an object here as well as a declaration type.
    member_access: $ => prec(PREC.MEMBER, seq(
      field('object', choice($._primary_expression, $.builtin_type)),
      '.',
      field('member', choice($.identifier, $.builtin_constant)),
    )),

    // `Point { X = 1, Y = 2 }` builds a record without temporary assignments.
    record_literal: $ => prec(PREC.MEMBER, seq(
      field('type', alias($.identifier, $.type_identifier)),
      '{',
      commaSep($.record_literal_field),
      '}',
    )),

    record_literal_field: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    // ---------- Terminals ----------
    // One token for every built-in statement name. A lexical precedence would
    // beat a longer keyword such as DECLARE, so the names carry none.
    builtin_statement: $ => token(choice(...BUILTIN_STATEMENTS.map(s => ci(s)))),

    // The built-in constants are their own token so that highlighting does not
    // need a case insensitive query predicate. Built-in functions do not need
    // one: a call is recognized by its parentheses.
    constant: $ => choice(
      $.string_literal,
      $.number_literal,
      $.money_literal,
      $.color_code,
      $.boolean_literal,
    ),

    // A doubled quote is a quote, there is no backslash escape.
    string_literal: $ => token(seq('"', repeat(choice(/[^"]/, '""')), '"')),

    number_literal: $ => token(choice(
      /\d+\.\d+/,
      /\d[0-9A-Fa-f]*[hH]/,
      /[01]+[bB]/,
      /[0-7]+[oO]/,
      /\d+[dD]/,
      /\d+/,
    )),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});
